home section base
Added buttons for profile and section navigation with icons.

--- a/assesment.html
+++ b/assesment.html
@@ -4,9 +4,48 @@
         <link rel="stylesheet" href="assesment.css">
     </head>
     <body>
-        <div id="home">
-            <canvas id="homeCanvas"></canvas>
-            <button id="menu1" class="menu">Menu</button>
+        <!--........................................................................-->
+        <!--home section-->
+        <div id="home"> 
+            <canvas id="homeCanvas"></canvas> 
+            <!--REMINDER: ask if required canvas; delete later-->
+            <button id="menu1" class="menu"> 
+                <!--To navigate to menu-->
+                <img src="https://static.vecteezy.com/system/resources/previews/019/858/703/non_2x/menu-flat-color-outline-icon-free-png.png" alt="menu" width="27" height="27">
+                <!--REMINDER: download picture if link not possible-->
+            </button>
+
+            <button id="profile1" class="profile">
+                <img src="https://static.thenounproject.com/png/638636-200.png" alt="profile" width="30" height="30">
+                <!--REMINDER: download picture if link not possible-->
+            </button>
+
+            <div id="section1" class="sectionNav">
+                <button id="dietSec" class="s1">
+                    <img src="https://cdn-icons-png.flaticon.com/512/123/123427.png" alt="diet" width="30" height="30">
+                </button>
+                <button id="exerciseSec" class="s2">
+                    <img src="https://cdn-icons-png.flaticon.com/512/233/233146.png" alt="exercise" width="30" height="30">
+                </button>
+                <button id="selfcareSec" class="s3">
+                    <img src="https://freesvg.org/img/heart-15.png" alt="self care" width="30" height="30">
+                </button>
+            </div>
+
         </div>
+        <!--........................................................................-->
+
+        <!--diet section-->
+
+        <!--exercise section-->
+
+        <!--selfcare section-->
+
+        <!--other sections (update)-->
+
+        <!--menu-->
+
+        
     </body>
+
 </html>
