diet section base code

--- a/assesment.html
+++ b/assesment.html
@@ -36,6 +36,30 @@
         <!--........................................................................-->
 
         <!--diet section-->
+        <div id="diet" class="hidden"> <!--class hidden so it doesn't show with home-->
+            <button id="menu2" class="menu"> 
+                <!--To navigate to menu-->
+                <img src="https://static.vecteezy.com/system/resources/previews/019/858/703/non_2x/menu-flat-color-outline-icon-free-png.png" alt="menu" width="27" height="27">
+            </button>
+
+            <!--To navigate to profile-->
+            <button id="profile2" class="profile">
+                <img src="https://static.thenounproject.com/png/638636-200.png" alt="profile" width="30" height="30">
+            </button>
+
+            <div id="section2" class="sectionNav"> 
+                <button id="homeSec" class="s1">
+                    <img src="https://cdn-icons-png.flaticon.com/256/25/25694.png" alt="home" width="30" height="30">
+                </button>
+                <button id="exerciseSec1" class="s2">
+                    <img src="https://cdn-icons-png.flaticon.com/512/233/233146.png" alt="exercise" width="30" height="30">
+                </button>
+                <button id="selfcareSec1" class="s3">
+                    <img src="https://freesvg.org/img/heart-15.png" alt="self care" width="30" height="30">
+                </button>
+            </div>
+        </div>
+
 
         <!--exercise section-->
 
@@ -49,3 +73,4 @@
     </body>
 
 </html>
+
