--- a/assesment.html
+++ b/assesment.html
@@ -7,8 +7,6 @@
         <!--........................................................................-->
         <!--home section-->
         <div id="home"> 
-            <canvas id="homeCanvas"></canvas> 
-            <!--REMINDER: ask if required canvas; delete later-->
             <button id="menu1" class="menu"> 
                 <!--To navigate to menu-->
                 <img src="https://static.vecteezy.com/system/resources/previews/019/858/703/non_2x/menu-flat-color-outline-icon-free-png.png" alt="menu" width="27" height="27">
@@ -20,7 +18,9 @@
                 <!--REMINDER: download picture if link not possible-->
             </button>
 
-            <div id="section1" class="sectionNav">
+            <h1 id="title1" class="title">BodyWise</h1> <!--title (bodywise)-->
+
+            <div id="section1" class="sectionNavB"> 
                 <button id="dietSec" class="s1">
                     <img src="https://cdn-icons-png.flaticon.com/512/123/123427.png" alt="diet" width="30" height="30">
                 </button>
@@ -73,4 +73,5 @@
     </body>
 
 </html>
+
 
