--- a/assesment.html
+++ b/assesment.html
@@ -4,7 +4,6 @@
         <link rel="stylesheet" href="assesment.css">
     </head>
     <body>
-        <!--........................................................................-->
         <!--home section-->
         <div id="home"> 
             <button id="menu1" class="menu"> 
@@ -18,7 +17,12 @@
                 <!--REMINDER: download picture if link not possible-->
             </button>
 
-            <h1 id="title1" class="title">BodyWise</h1> <!--title (bodywise)-->
+            <h1 id="title1" class="title">BodyWise</h1>
+
+            <div id="greetingHome">
+                <h3>Hello there, </h3>
+                <h1 id="userName">(User name)!</h1>
+            </div>
 
             <div id="section1" class="sectionNavB"> 
                 <button id="dietSec" class="s1">
@@ -33,7 +37,38 @@
             </div>
 
         </div>
-        <!--........................................................................-->
+
+        <!--exercise section-->
+        <div id="exercise" class="hidden"> <!--class hidden so it doesn't show with home-->
+            <button id="menu3" class="menu"> 
+                <!--To navigate to menu-->
+                <img src="https://static.vecteezy.com/system/resources/previews/019/858/703/non_2x/menu-flat-color-outline-icon-free-png.png" alt="menu" width="27" height="27">
+            </button>
+
+            <!--To navigate to profile-->
+            <button id="profile3" class="profile">
+                <img src="https://static.thenounproject.com/png/638636-200.png" alt="profile" width="30" height="30">
+            </button>
+
+            <h1 id="title1" class="title">BodyWise</h1>
+
+            <div id="greetingExercise">
+                <h3>Hello there, </h3>
+                <h1 id="userName">(User name)!</h1>
+            </div>
+
+            <div id="section3" class="sectionNavBl"> 
+                <button id="homeSec1" class="s2">
+                    <img src="https://cdn-icons-png.flaticon.com/256/25/25694.png" alt="home" width="30" height="30">
+                </button>
+                <button id="dietSec1" class="s1">
+                    <img src="https://cdn-icons-png.flaticon.com/512/123/123427.png" alt="diet" width="30" height="30">
+                </button>
+                <button id="selfcareSec2" class="s3">
+                    <img src="https://freesvg.org/img/heart-15.png" alt="self care" width="30" height="30">
+                </button>
+            </div>
+        </div>
 
         <!--diet section-->
         <div id="diet" class="hidden"> <!--class hidden so it doesn't show with home-->
@@ -47,7 +82,14 @@
                 <img src="https://static.thenounproject.com/png/638636-200.png" alt="profile" width="30" height="30">
             </button>
 
-            <div id="section2" class="sectionNav"> 
+            <h1 id="title1" class="title">BodyWise</h1>
+
+            <div id="greetingDiet">
+                <h3>Hello there, </h3>
+                <h1 id="userName">(User name)!</h1>
+            </div>
+
+            <div id="section2" class="sectionNavG"> 
                 <button id="homeSec" class="s1">
                     <img src="https://cdn-icons-png.flaticon.com/256/25/25694.png" alt="home" width="30" height="30">
                 </button>
@@ -59,19 +101,7 @@
                 </button>
             </div>
         </div>
-
-
-        <!--exercise section-->
-
-        <!--selfcare section-->
-
-        <!--other sections (update)-->
-
-        <!--menu-->
-
         
+        <script src="assesment.js"></script>
     </body>
-
 </html>
-
-
