new class for js functioning

--- a/assesment.html
+++ b/assesment.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <!--home section-->
-        <div id="home"> 
+        <div id="home" class="page"> 
             <button id="menu1" class="menu"> 
                 <!--To navigate to menu-->
                 <img src="https://static.vecteezy.com/system/resources/previews/019/858/703/non_2x/menu-flat-color-outline-icon-free-png.png" alt="menu" width="27" height="27">
@@ -39,7 +39,7 @@
         </div>
 
         <!--exercise section-->
-        <div id="exercise" class="hidden"> <!--class hidden so it doesn't show with home-->
+        <div id="exercise" class="hidden page"> <!--class hidden so it doesn't show with home-->
             <button id="menu3" class="menu"> 
                 <!--To navigate to menu-->
                 <img src="https://static.vecteezy.com/system/resources/previews/019/858/703/non_2x/menu-flat-color-outline-icon-free-png.png" alt="menu" width="27" height="27">
@@ -50,7 +50,7 @@
                 <img src="https://static.thenounproject.com/png/638636-200.png" alt="profile" width="30" height="30">
             </button>
 
-            <h1 id="title1" class="title">BodyWise</h1>
+            <h1 id="title3" class="title">BodyWise</h1>
 
             <div id="greetingExercise">
                 <h3>Hello there, </h3>
@@ -71,7 +71,7 @@
         </div>
 
         <!--diet section-->
-        <div id="diet" class="hidden"> <!--class hidden so it doesn't show with home-->
+        <div id="diet" class="hidden page"> <!--class hidden so it doesn't show with home-->
             <button id="menu2" class="menu"> 
                 <!--To navigate to menu-->
                 <img src="https://static.vecteezy.com/system/resources/previews/019/858/703/non_2x/menu-flat-color-outline-icon-free-png.png" alt="menu" width="27" height="27">
@@ -82,7 +82,7 @@
                 <img src="https://static.thenounproject.com/png/638636-200.png" alt="profile" width="30" height="30">
             </button>
 
-            <h1 id="title1" class="title">BodyWise</h1>
+            <h1 id="title2" class="title">BodyWise</h1>
 
             <div id="greetingDiet">
                 <h3>Hello there, </h3>
@@ -98,6 +98,38 @@
                 </button>
                 <button id="selfcareSec1" class="s3">
                     <img src="https://freesvg.org/img/heart-15.png" alt="self care" width="30" height="30">
+                </button>
+            </div>
+        </div>
+
+        <!--self-care section-->
+        <div id="selfcare" class="hidden page"> <!--class hidden so it doesn't show with home-->
+            <button id="menu4" class="menu"> 
+                <!--To navigate to menu-->
+                <img src="https://static.vecteezy.com/system/resources/previews/019/858/703/non_2x/menu-flat-color-outline-icon-free-png.png" alt="menu" width="27" height="27">
+            </button>
+
+            <!--To navigate to profile-->
+            <button id="profile4" class="profile">
+                <img src="https://static.thenounproject.com/png/638636-200.png" alt="profile" width="30" height="30">
+            </button>
+
+            <h1 id="title4" class="title">BodyWise</h1>
+
+            <div id="greetingSelfcare">
+                <h3>Hello there, </h3>
+                <h1 id="userName">(User name)!</h1>
+            </div>
+
+            <div id="section4" class="sectionNavR"> 
+                <button id="homeSec2" class="s3">
+                    <img src="https://cdn-icons-png.flaticon.com/256/25/25694.png" alt="home" width="30" height="30">
+                </button>
+                <button id="exerciseSec2" class="s2">
+                    <img src="https://cdn-icons-png.flaticon.com/512/233/233146.png" alt="exercise" width="30" height="30">
+                </button>
+                <button id="dietSec2" class="s1">
+                    <img src="https://cdn-icons-png.flaticon.com/512/123/123427.png" alt="diet" width="30" height="30">
                 </button>
             </div>
         </div>
