--- a/assesment.html
+++ b/assesment.html
@@ -89,6 +89,11 @@
                 <h1 id="userName">(User name)!</h1>
             </div>
 
+            <div id="dietDIV">
+                <img src="C:\Users\Kisho\Pictures\Screenshots\bear.png" alt="bear.png" width="50%" height="67%">
+                <p>This section’s still under progress! Come back later.</p>
+            </div>
+
             <div id="section2" class="sectionNavG"> 
                 <button id="homeSec" class="s1">
                     <img src="https://cdn-icons-png.flaticon.com/256/25/25694.png" alt="home" width="30" height="30">
@@ -137,3 +142,4 @@
         <script src="assesment.js"></script>
     </body>
 </html>
+
