--- a/assesment.html
+++ b/assesment.html
@@ -24,6 +24,24 @@
                 <h1 id="userName">(User name)!</h1>
             </div>
 
+            <div id="reccomendations">
+                <h3>Reccomendations</h3>
+                <button id="walkingR" style="width: 50%; margin-right: 40%;">
+                    <h3>Walking</h3>
+                    <p>Want a quick mindful walk with the nature out there? Try taking a walk!</p>
+                </button>
+                <br>
+                <button id="joggingR" style="width: 50%; margin-right: 40%;">
+                    <h3>Jogging</h3>
+                    <p>Need exercise, in the mood to run, but dont got the energy? Try having a jog!</p>
+                </button>
+
+                <button id="dancingR" style="width: 34%; height: 160px; margin-left: 55%;">
+                    <h3>Dancing</h3>
+                    <p>its fun.</p>
+                </button>
+            </div>
+
             <div id="section1" class="sectionNavB"> 
                 <button id="dietSec" class="s1">
                     <img src="https://cdn-icons-png.flaticon.com/512/123/123427.png" alt="diet" width="30" height="30">
@@ -56,6 +74,8 @@
                 <h3>Hello there, </h3>
                 <h1 id="userName">(User name)!</h1>
             </div>
+
+            <button id="exerciseNow" class="exerciseButtons">Exercise now</button>
 
             <div id="section3" class="sectionNavBl"> 
                 <button id="homeSec1" class="s2">
@@ -126,6 +146,8 @@
                 <h1 id="userName">(User name)!</h1>
             </div>
 
+            <button id="selfcareIdeas" class="selfcareButtons">Self-care Ideas</button>
+
             <div id="section4" class="sectionNavR"> 
                 <button id="homeSec2" class="s3">
                     <img src="https://cdn-icons-png.flaticon.com/256/25/25694.png" alt="home" width="30" height="30">
@@ -142,4 +164,5 @@
         <script src="assesment.js"></script>
     </body>
 </html>
+
 
